# softsaturateofx

./: CMakeLists.txt  README.md
src/: bbbchatofx.cpp  softaturate.cpp  softsaturate.cpp
